// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`userEvent.longPress with fake timers calls onLongPress if the delayLongPress is the default one 1`] = `
[
  {
    "name": "longPress",
    "payload": {
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 0,
        "touches": [],
      },
    },
  },
]
`;

exports[`userEvent.longPress with fake timers works on Pressable 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 0,
        "touches": [],
      },
    },
  },
  {
    "name": "longPress",
    "payload": {
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 0,
        "touches": [],
      },
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 500,
        "touches": [],
      },
    },
  },
]
`;
